--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
   <br>
   <hr>
   <div id="contact">
-    <h3 style="font-weight:300;"><span style="color:transparent;"></span>Impressum:</h3>
+    <h3 style="font-weight:300; font-size:3vw;"><span style="color:transparent;"></span>Impressum:</h3>
    <ul style="list-style-type:none; padding-right:4vw;">
      
-     <li>Contact phone: +385923810465</li>
-     <li>E-mail: velekic@gmail.com</li>
-     <li>Facebook address:https://www.facebook.com/vedran.b.lekic</li>
+     <li>Contact phone:  +385923810465</li>
+     <li>E-mail:  velekic@gmail.com</li>
+     <li>Facebook address:  https://www.facebook.com/vedran.b.lekic</li>
    </ul>
          
      </div>
