--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
      
      <li>Contact phone:  +385923810465</li>
      <li>E-mail:  velekic@gmail.com</li>
-	   <li><a href="https://www.facebook.com/vedran.b.lekic">Facebook address:  https://www.facebook.com/vedran.b.lekic</a> </li>
+	   <li>Facebook address:  <a href="https://www.facebook.com/vedran.b.lekic">https://www.facebook.com/vedran.b.lekic</a> </li>
    </ul>
          
      </div>
