--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
      <li>Contact phone:  +385923810465</li>
      <li>E-mail:  velekic@gmail.com</li>
 	   <li>Facebook address:  <a href="https://www.facebook.com/vedran.b.lekic">https://www.facebook.com/vedran.b.lekic</a> </li>
-	   <li><a href="https://www.codewars.com/users/Vedran1962/stats">My Codewars profile</a></li>
+	   <li>Codewars profile:   <a href="https://www.codewars.com/users/Vedran1962/stats">https://www.codewars.com/users/Vedran1962/stats</a></li>
 	  </ul>
          
      </div>
