--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   <hr>
   <div id="contact">
     <h3 style="font-weight:300; font-size:3vw;"><span style="color:transparent;"></span>Impressum:</h3>
-   <ul style="list-style-type:none; padding-right:4vw;">
+   <ul style="list-style-type:none; padding-right:4vw; font-size:2.5vw;">
      
      <li>Contact phone:  +385923810465</li>
      <li>E-mail:  velekic@gmail.com</li>
